--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -4,6 +4,6 @@
     <title>Jeu du + -</title>
 </head>
 <body>
-    <script src="./Jeu_du_+_-.js"></script> 
+    <script type="text/javascript" src="./Jeu_du_+_-.js"></script> 
 </body>
 </html>
