transform to html/css first push

--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -4,6 +4,13 @@
     <title>Jeu du + -</title>
 </head>
 <body>
+    <div class="content">
+        <h1>Jeu du + et du -</h1>
+        <label for="name">Veuillez entrer votre nombre:</label>
+        <input type="text" name="userNumber" id="userNumber" size="10">
+        <button onclick="getUserInput()"type="button">Entrer</button>
+    </div>
+
     <script src="./Jeu_du_+_-.js"></script> 
 </body>
 </html>
