--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -8,7 +8,7 @@
         <h1>Jeu du + et du -</h1>
         <label for="name">Veuillez entrer votre nombre:</label>
         <input type="text" name="userNumber" id="userNumber" size="10">
-        <button onclick="getUserInput()"type="button">Entrer</button>
+        <button onclick="game()"type="button">Entrer</button>
         <p id="number"></p>
     </div>
 
