--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -9,7 +9,7 @@
         <label for="name">Veuillez entrer votre nombre:</label>
         <input type="text" name="userNumber" id="userNumber" size="10">
         <button onclick="game()"type="button">Entrer</button>
-        <p id="number"></p>
+        <p id="response"></p>
     </div>
 
     <script src="./Jeu_du_+_-.js"></script> 
