--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf8">
+    <link href="index.css" rel="stylesheet">
     <title>Jeu du + -</title>
 </head>
 <body>
     <div class="content">
         <h1>Jeu du + et du -</h1>
-        <label for="name">Veuillez entrer votre nombre:</label>
-        <input type="text" name="userNumber" id="userNumber" size="10">
+        <label for="nombre">Veuillez entrer votre nombre:</label>
+        <input type="text" name="nombre" id="userNumber" size="10">
         <button onclick="game()"type="button">Entrer</button>
         <p id="response"></p>
     </div>
