--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -14,6 +14,11 @@
 
         <button onclick="game()"type="button">Entrer</button>
 
+        <label for="nombre">Veuillez entrer votre nombre:</label>
+        <input type="text" name="nombre" id="userNumber" size="10">
+
+        <button onclick="game()"type="button">Entrer</button>
+
         <p id="response"></p>
 
         <div id="userDiv" style="display:none">
