--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -9,11 +9,11 @@
 
         <h1>Jeu du + et du -</h1>
 
-        <label for="nombre">Veuillez entrer votre nombre:</label>
-        <input type="text" name="nombre" id="userNumber" size="10">
+        <label for="difficulte">Facile - Moyen - Difficile:</label>
+        <input type="text" name="difficulte" id="userDifficulty" size="10">
 
-        <button onclick="game()"type="button">Entrer</button>
-
+        <button onclick="setDifficulty()"type="button">Entrer</button>
+        <br>
         <label for="nombre">Veuillez entrer votre nombre:</label>
         <input type="text" name="nombre" id="userNumber" size="10">
 
