--- a/JavaScript/exo/index.html
+++ b/JavaScript/exo/index.html
@@ -41,6 +41,6 @@
         </table>
     </div>
     
-    <script src="./Jeu_du_+_-.js"></script> 
+    <script type="module" src="./Jeu_du_+_-.js"></script> 
 </body>
 </html>
